--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -794,6 +794,10 @@ span {
   top: 1.5rem;
 }
 
+.-top-\[140px\] {
+  top: -140px;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -988,8 +992,16 @@ span {
   width: 260px;
 }
 
+.w-\[270px\] {
+  width: 270px;
+}
+
 .w-\[280px\] {
   width: 280px;
+}
+
+.w-\[290px\] {
+  width: 290px;
 }
 
 .w-\[294px\] {
@@ -1032,16 +1044,8 @@ span {
   width: 100%;
 }
 
-.w-\[28px\] {
-  width: 28px;
-}
-
-.w-\[270px\] {
-  width: 270px;
-}
-
-.w-\[290px\] {
-  width: 290px;
+.w-\[350px\] {
+  width: 350px;
 }
 
 .max-w-8 {
@@ -1357,24 +1361,44 @@ span {
     width: 400px;
   }
 
-  .sm\:w-\[420px\] {
-    width: 420px;
-  }
-
-  .sm\:w-full {
-    width: 100%;
-  }
-
   .sm\:w-\[410px\] {
     width: 410px;
+  }
+
+  .sm\:w-\[420px\] {
+    width: 420px;
   }
 
   .sm\:w-\[430px\] {
     width: 430px;
   }
 
+  .sm\:w-\[480px\] {
+    width: 480px;
+  }
+
+  .sm\:w-full {
+    width: 100%;
+  }
+
+  .sm\:w-\[370px\] {
+    width: 370px;
+  }
+
+  .sm\:w-\[350px\] {
+    width: 350px;
+  }
+
   .sm\:w-\[450px\] {
     width: 450px;
+  }
+
+  .sm\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .sm\:w-\[300px\] {
+    width: 300px;
   }
 
   .sm\:bg-launch-img-text-desktop {
@@ -1387,10 +1411,6 @@ span {
 
   .sm\:pt-36 {
     padding-top: 9rem;
-  }
-
-  .sm\:pt-40 {
-    padding-top: 10rem;
   }
 }
 
@@ -1411,8 +1431,8 @@ span {
     bottom: 4rem;
   }
 
-  .md\:-top-\[130px\] {
-    top: -130px;
+  .md\:-top-\[110px\] {
+    top: -110px;
   }
 
   .md\:mb-10 {
@@ -1439,6 +1459,10 @@ span {
     height: 1024px;
   }
 
+  .md\:h-\[15\%\] {
+    height: 15%;
+  }
+
   .md\:h-\[270px\] {
     height: 270px;
   }
@@ -1459,8 +1483,8 @@ span {
     height: 718px;
   }
 
-  .md\:h-\[15\%\] {
-    height: 15%;
+  .md\:h-\[25\%\] {
+    height: 25%;
   }
 
   .md\:w-20 {
@@ -1485,6 +1509,10 @@ span {
 
   .md\:w-\[370px\] {
     width: 370px;
+  }
+
+  .md\:w-\[380px\] {
+    width: 380px;
   }
 
   .md\:w-\[400px\] {
@@ -1539,24 +1567,28 @@ span {
     width: 600px;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:w-\[380px\] {
-    width: 380px;
-  }
-
   .md\:w-\[630px\] {
     width: 630px;
   }
 
-  .md\:w-\[4500px\] {
-    width: 4500px;
+  .md\:w-full {
+    width: 100%;
   }
 
-  .md\:w-\[420px\] {
-    width: 420px;
+  .md\:w-\[480px\] {
+    width: 480px;
+  }
+
+  .md\:w-\[580px\] {
+    width: 580px;
+  }
+
+  .md\:w-\[360px\] {
+    width: 360px;
+  }
+
+  .md\:w-\[350px\] {
+    width: 350px;
   }
 
   .md\:max-w-\[400px\] {
@@ -1585,14 +1617,6 @@ span {
 
   .md\:pt-16 {
     padding-top: 4rem;
-  }
-
-  .md\:pt-24 {
-    padding-top: 6rem;
-  }
-
-  .md\:pt-20 {
-    padding-top: 5rem;
   }
 
   .md\:text-2xl {
@@ -1636,12 +1660,12 @@ span {
     top: -180px;
   }
 
-  .lg\:bottom-0 {
-    bottom: 0px;
-  }
-
   .lg\:-top-\[190px\] {
     top: -190px;
+  }
+
+  .lg\:bottom-0 {
+    bottom: 0px;
   }
 
   .lg\:mt-12 {
@@ -1772,6 +1796,10 @@ span {
     width: 630px;
   }
 
+  .lg\:w-\[650px\] {
+    width: 650px;
+  }
+
   .lg\:w-\[660px\] {
     width: 660px;
   }
@@ -1780,28 +1808,32 @@ span {
     width: 700px;
   }
 
-  .lg\:w-full {
-    width: 100%;
-  }
-
-  .lg\:w-\[730px\] {
-    width: 730px;
-  }
-
   .lg\:w-\[760px\] {
     width: 760px;
   }
 
-  .lg\:w-\[550\] {
-    width: 550;
+  .lg\:w-full {
+    width: 100%;
   }
 
-  .lg\:w-\[650\] {
-    width: 650;
+  .lg\:w-\[750px\] {
+    width: 750px;
   }
 
-  .lg\:w-\[650px\] {
-    width: 650px;
+  .lg\:w-\[6\\700px\] {
+    width: 6\700px;
+  }
+
+  .lg\:w-\[640px\] {
+    width: 640px;
+  }
+
+  .lg\:w-\[580px\] {
+    width: 580px;
+  }
+
+  .lg\:w-\[45px\] {
+    width: 45px;
   }
 
   .lg\:max-w-\[500px\] {
@@ -1929,6 +1961,10 @@ span {
     width: 660px;
   }
 
+  .xl\:w-\[670px\] {
+    width: 670px;
+  }
+
   .xl\:w-\[680px\] {
     width: 680px;
   }
@@ -1949,20 +1985,20 @@ span {
     width: 730px;
   }
 
-  .xl\:w-\[820px\] {
-    width: 820px;
-  }
-
-  .xl\:w-\[670px\] {
-    width: 670px;
-  }
-
   .xl\:w-\[750px\] {
     width: 750px;
   }
 
-  .xl\:w-\[630px\] {
-    width: 630px;
+  .xl\:w-\[820px\] {
+    width: 820px;
+  }
+
+  .xl\:w-\[870px\] {
+    width: 870px;
+  }
+
+  .xl\:w-\[840px\] {
+    width: 840px;
   }
 
   .xl\:max-w-\[690px\] {
